# WalkerShop

./: .gitignore  LICENSE.txt  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini  setup.cfg
WalkerShop/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
account/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
account/fixtures/: initial_data.json
account/migrations/: 0001_initial.py  0002_alter_client_date_joined.py  0003_alter_client_options_alter_client_date_joined_and_more.py  0004_alter_client_managers.py  0005_alter_client_managers_alter_client_email_and_more.py
account/services/: email.py
account/templates/: forgotten-password.html  login.html  signup.html
account/tests/: tests_forms.py  tests_models.py  tests_views.py
cart/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
cart/fixtures/: initial_data.json
cart/migrations/: 0001_initial.py  0002_clientaudiencecategory_alter_product_product_name_and_more.py  0003_alter_clientaudiencecategory_options_and_more.py  0004_audiencecategory_productsubcategory_and_more.py  0005_productcategory_category_description.py  0006_productcategory_subcategory_and_more.py
cart/templates/: cart.html  checkout-payment.html  checkout-shipping.html  checkout.html
core/: admin.py  models.py  urls.py  views.py
shop/: apps.py  models.py  urls.py  views.py
templates/: base.html  cart.html  category.html  checkout-payment.html  checkout-shipping.html  checkout.html  footer.html  header.html  index.html  navbar.html  product.html
tests/: mixins.py
(+25 files in other folders)
