[tool.poetry]
name = "walkershop"
version = "0.1.0"
description = ""
authors = ["TarhanovM <tarmd@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.3"
pytest-django = "^4.5.2"
aiosmtpd = "^1.4.4.post2"
wemake-python-styleguide = "^0.18.0"
django-stubs = "^4.2.4"
django-getenv = "^1.3.2"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# -- Example FILE: pyproject.toml
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]